--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Tzuyulin的個人網站</title>
+        <title>Tzuyulin的個人履歷網站</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -66,7 +66,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">門市專櫃銷售工讀生</h3>
-                            <div class="subheading mb-3">小室瓶栽 EASY PLANT</div>
+                            <div class="subheading mb-3">小室瓶栽 EASYPLANT</div>
                             <ul>
                                 <li>推廣銷售商品與推廣品牌</li>
                                 <li>協助商品陳列及盤點上架</li>
