改了圖片照片

--- a/index.html
+++ b/index.html
@@ -159,12 +159,51 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">攝影作品</h2>
-                    <img src="graduation.jpg" alt="畢業專題" width="49%" class="photostyle"> <!--img的寬度一定要在html裡面設定-->
-                    <img src="welcome.png" alt="吃飽才有利企" width="49%" class="photostyle">
-                    <img src="ntubhiphop.png" alt="北商嘻研小城" width="49%" class="photostyle">
-                    <img src="ntubba109.jpg" alt="科會LOGO內部版" width="49%" class="photostyle">
-
-                </div>
+<!-- Gallery -->
+<div class="row">
+    <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+      <img
+        src="graduation.jpg"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt="Boat on Calm Water"
+      />
+  
+      <img
+        src="ntubba109.jpg"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt="Wintry Mountain Landscape"
+      />
+    </div>
+  
+    <div class="col-lg-4 mb-4 mb-lg-0">
+      <img
+        src="ntubhiphop.png"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt="Mountains in the Clouds"
+      />
+  
+      <img
+        src="welcome.png"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt="Boat on Calm Water"
+      />
+    </div>
+  
+    <div class="col-lg-4 mb-4 mb-lg-0">
+      <img
+        src="graduation.jpg"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt="Waves at Sea"
+      />
+  
+      <img
+        src="ntubba109.jpg"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt="Yosemite National Park"
+      />
+    </div>
+  </div>
+  <!-- Gallery -->                </div>
             </section>
             <hr class="m-0" />
             <!-- Awards-->
